# afri-dollar

./: README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  contracts.yml  pr-checks.yml
apps/backend/: .env.example  README.md
apps/backend/src/: index.ts
apps/backend/src/config/: database.ts
apps/backend/src/controllers/: audit.controller.ts  auth.controller.ts  stellar.controller.ts  wallet.controller.ts
apps/backend/src/middleware/: audit.middleware.ts  auth.middleware.ts
apps/backend/src/routes/: audit.routes.ts  auth.routes.ts  stellar.routes.ts  wallet.routes.ts
apps/backend/src/services/: audit.service.ts  auth.service.ts  payment.service.ts  payroll.service.ts  treasury.service.ts  wallet.service.ts
apps/backend/src/tests/unit/: payment.test.ts  payroll.controller.test.ts  payroll.test.ts  wallet.test.ts
apps/backend/src/types/: index.ts  wallet.types.ts
apps/backend/src/utils/: validation.ts
apps/contracts/: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
apps/contracts/contracts/counter/: Cargo.toml
apps/contracts/contracts/counter/src/: lib.rs  test.rs
apps/contracts/contracts/treasury/: Cargo.toml
apps/contracts/contracts/treasury/src/: lib.rs  test.rs
apps/contracts/crates/shared/: Cargo.toml
apps/contracts/crates/shared/src/: lib.rs
apps/frontend/: .env.example  README.md
apps/frontend/tests/: components.test.tsx  smoke.test.tsx
