[package]
name = "treasury"
description = "AfriDollar treasury contract with time-locked withdrawal mechanism"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
afri-contract-shared = { workspace =true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
